# phishpicks

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/: README.md  TODO.md
phishpicks/: __init__.py  command.py  configuration.py  dap.py  data.py  database.py  fixes.py  picks.py  repl.py  winamp.py
tests/: conftest.py  test_configuration.py  test_data.py  test_picks.py  test_repl.py
