[tool.poetry]
name = "phishpicks"
version = "0.1.0"
description = "Tooling for playing and copying Phish albums"
authors = ["Richard Podkolinski <devlar@gmail.com>"]
license = "GPL v3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
