[tool.poetry]
name = "phishpicks"
version = "1.0.1"
description = "Tooling for playing and copying Phish albums"
authors = ["Richard Podkolinski <devlar@gmail.com>"]
license = "GPL v3"
readme = "docs/README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.4"
mutagen = "^1.47.0"
prompt-toolkit = "^3.0.43"
sqlalchemy = "^2.0.29"
pytest = "^8.1.1"
tqdm = "^4.66.2"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."console_scripts"]
"phishpicks" = "phishpicks.repl:main"
